sfdx-source/force-app/main/default/objects/Opportunity/fields/Accepted_Partnership_Details__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Partnership_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-21606</description>
    <label>Accepted Partnership Details</label>
    <type>Checkbox</type>
</CustomField>