sfdx-source/force-app/main/default/objects/Opportunity/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18923: It uses to surfaces the Billing Country from the Business Account with which the opportunity is associated.</description>
    <formula>Account.BillingCountry</formula>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>