sfdx-source/force-app/main/default/objects/Opportunity/fields/Account_Deck_Rank__c.field-meta.xml
<CustomField>
    <fullName>Account_Deck_Rank__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13475: It stores the Deck Rank value of associated Account.</description>
    <formula>TEXT(Account.Deck_Rank__c)</formula>
    <label>Deck Rank</label>
    <type>Text</type>
</CustomField>