sfdx-source/force-app/main/default/objects/Opportunity/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>LEM-3607: It is used to capture the record type id of the parent Account.</description>
    <formula>Account.RecordTypeId</formula>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>