sfdx-source/force-app/main/default/objects/Opportunity/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <description>LEM-13426: Pulls the Account Segment onto the opportunity</description>
    <formula>TEXT(Account.Segment__c)</formula>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>