sfdx-source/force-app/main/default/objects/Opportunity/fields/Account_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Account_Time_Zone__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18923: It uses to surfaces the Time Zone from the Business Account.</description>
    <formula>Account.Time_Zone__c</formula>
    <label>Account Time Zone</label>
    <type>Text</type>
</CustomField>