sfdx-source/force-app/main/default/objects/Opportunity/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>LEM-5030: It is used to store the Type of the Account associated to the Opportunity.</description>
    <formula>TEXT(Account.Type)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>