sfdx-source/force-app/main/default/objects/Opportunity/fields/Activation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Activation_Notes__c</fullName>
    <description>LEM-2294: Captures the various steps required to be followed to carry out manual activation.</description>
    <label>Manual Activation Notes</label>
    <type>TextArea</type>
</CustomField>