sfdx-source/force-app/main/default/objects/Opportunity/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-9975: Associate an Agency to the Opportunity</description>
    <label>Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <filterItems>
            <field>$Source.CurrencyIsoCode</field>
            <operation>equals</operation>
            <valueField>Account.CurrencyIsoCode</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>