sfdx-source/force-app/main/default/objects/Opportunity/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-8120 Same Store COO _ DDMx data related changes</description>
    <label>Batch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>