sfdx-source/force-app/main/default/objects/Opportunity/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <description>LEM-16820: It stores the Business ID onto which the franchisee should be onboarded.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Business ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>