sfdx-source/force-app/main/default/objects/Opportunity/fields/Campaign_Program__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-3677: It is used to indicate the associated Campaign Program.</description>
    <label>Campaign Program</label>
    <referenceTo>Campaign_Program__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>