sfdx-source/force-app/main/default/objects/Opportunity/fields/Campaign_Program_is_N_A__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Program_is_N_A__c</fullName>
    <description>LEM-9256: New field for A&amp;P Pipeline tracking</description>
    <label>Is there a Campaign Program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>