sfdx-source/force-app/main/default/objects/Opportunity/fields/Campaign_TLDR__c.field-meta.xml
<CustomField>
    <fullName>Campaign_TLDR__c</fullName>
    <description>LEM-3674: It is used to capture the Campaign TLDR.</description>
    <label>Campaign TLDR</label>
    <type>TextArea</type>
</CustomField>