sfdx-source/force-app/main/default/objects/Opportunity/fields/Campaign_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Vertical__c</fullName>
    <description>LEM-9256: New field for A&amp;P Pipeline tracking</description>
    <label>Campaign Vertical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Campaign_Vertical</valueSetName>
    </valueSet>
</CustomField>