sfdx-source/force-app/main/default/objects/Opportunity/fields/Churn_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Reason__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14050: It indicates the reason the Merchant is at risk of churning.</description>
    <inlineHelpText>Indicates the reason the Merchant is at risk of churning.</inlineHelpText>
    <label>Churn Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor Pitching Exclusivity</fullName>
            </value>
            <value>
                <fullName>Focus on Native Channel</fullName>
            </value>
            <value>
                <fullName>Low Order Volume</fullName>
            </value>
            <value>
                <fullName>Negative DoorDash Experience</fullName>
            </value>
            <value>
                <fullName>Operational Obstacles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>