sfdx-source/force-app/main/default/objects/Opportunity/fields/Churn_Severity__c.field-meta.xml
<CustomField>
    <fullName>Churn_Severity__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14050: It represents churn severity.</description>
    <inlineHelpText>Indicates the likelihood that the Merchant churns.</inlineHelpText>
    <label>Churn Severity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>