sfdx-source/force-app/main/default/objects/Opportunity/fields/Contract_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13561: It populates the Date the contract was sent to Mx for signature.</description>
    <formula>
      IF(
      NOT(ISBLANK(SBQQ__PrimaryQuote__r.Out_For_Signature_Date__c)),
      SBQQ__PrimaryQuote__r.Out_For_Signature_Date__c,
      null)
    </formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date the contract was sent to Mx for signature.</inlineHelpText>
    <label>Contract Sent Date</label>
    <type>Date</type>
</CustomField>