sfdx-source/force-app/main/default/objects/Opportunity/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13561: It is used to populate the date when the Mx signed the contract.</description>
    <formula>
  IF(
  AND(
  NOT(ISBLANK(SBQQ__PrimaryQuote__r.Contract_Signed_Date__c)),
  ISPICKVAL(SBQQ__PrimaryQuote__r.SBQQ__Status__c ,'Contract Signed')),
  SBQQ__PrimaryQuote__r.Contract_Signed_Date__c,
  null
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date the Mx signed the contract.</inlineHelpText>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>