sfdx-source/force-app/main/default/objects/Opportunity/fields/Contract_URL__c.field-meta.xml
<CustomField>
    <fullName>Contract_URL__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15358: It is used to generate Contract url.</description>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_540, FIND($CustomMetadata.Static_Configurations__mdt.Enterprise_Server_URL_Search_Key.Configuration_Value__c, $Api.Enterprise_Server_URL_540, 0) - 1) +  ContractId , &apos;Contract&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract URL</label>
    <type>Text</type>
</CustomField>