sfdx-source/force-app/main/default/objects/Opportunity/fields/Converted_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14086: It is created to store the lead id on opportunity post conversion for identification.</description>
    <label>Converted Lead Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>