sfdx-source/force-app/main/default/objects/Opportunity/fields/Count_of_Calls_Outbound_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Calls_Outbound_Inbound__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>0</defaultValue>
    <description>LEM-14090: It is used to display the total number of calls associated with the object with status = completed.</description>
    <inlineHelpText>Number of calls (both outbound &amp; inbound) with the Merchant</inlineHelpText>
    <label>Count of Calls (Outbound &amp; Inbound)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>