sfdx-source/force-app/main/default/objects/Opportunity/fields/Custom_Notes_to_Display_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Custom_Notes_to_Display_on_Invoice__c</fullName>
    <description>LEM-9791: New Invoicing fields for opp</description>
    <label>Custom Notes to Display on Invoice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>