sfdx-source/force-app/main/default/objects/Opportunity/fields/Days_Quote_is_OFS__c.field-meta.xml
<CustomField>
    <fullName>Days_Quote_is_OFS__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13475: It stores number of days Quote is out for signature.</description>
    <formula>IF (
  TEXT(SBQQ__PrimaryQuote__r.SBQQ__Status__c) = $Label.Quote_Status_Out_for_Signature,
  TODAY() - SBQQ__PrimaryQuote__r.Out_For_Signature_Date__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Quote is OFS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>