sfdx-source/force-app/main/default/objects/Opportunity/fields/Days_Since_Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Stage_Change__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13561: It is used to populate Numbers of days since the opportunity stage has been changed.</description>
    <formula>IF(
        ISBLANK(LastStageChangeDate),
        null,
        TODAY() - Last_Stage_Change__c
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Numbers of days since the SMB opportunity stage has been changed.</inlineHelpText>
    <label>Days Since Last Stage Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>