sfdx-source/force-app/main/default/objects/Opportunity/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <description>LEM-1145: Opportunity Lite</description>
    <inlineHelpText>Indicates whether this deal will follow the standard opportunity workflow or the lite process.</inlineHelpText>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Lite</fullName>
            </value>
            <value>
                <fullName>Self-Serve</fullName>
            </value>
            <value>
                <fullName>Full-Serve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>