sfdx-source/force-app/main/default/objects/Opportunity/fields/Deck_Rank_At_Closed_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deck_Rank_At_Closed_Stage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14100: It represents the Deck Rank of the associated Account when Opportunity is Closed.</description>
    <label>Deck Rank At Closed Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deck_Rank_Values</valueSetName>
    </valueSet>
</CustomField>