sfdx-source/force-app/main/default/objects/Opportunity/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>LEM-4987: It is used to maintain information regarding the Opportunity and its current status.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>