sfdx-source/force-app/main/default/objects/Opportunity/fields/Deselected_Marketplace_Offerings__c.field-meta.xml
<CustomField>
    <fullName>Deselected_Marketplace_Offerings__c</fullName>
    <description>LEM-2734: Based on the terms of an MSA, Franchisees may be able to select Marketplace services they do not want their stores enrolled in. This field captures the services a Franchisee has deselected, and these services are not provisioned for all stores owned by the Franchisee.</description>
    <inlineHelpText>Based on the terms of an MSA, Franchisees may be able to select Marketplace services they do not want their stores enrolled in. This field captures the services a Franchisee has deselected, and these services are not provisioned for all stores owned by the Franchisee.</inlineHelpText>
    <label>Deselected Marketplace Offerings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>DashPass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>