sfdx-source/force-app/main/default/objects/Opportunity/fields/Drive_Nintex_Id__c.field-meta.xml
<CustomField>
    <fullName>Drive_Nintex_Id__c</fullName>
    <description>LEM-2294: Captures the Id of Drive workflow instance to uniquely identify the source of the Opportunity.</description>
    <label>Drive Nintex Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>