sfdx-source/force-app/main/default/objects/Opportunity/fields/Enable_Onboard_SMB_Stores__c.field-meta.xml
<CustomField>
    <fullName>Enable_Onboard_SMB_Stores__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-23683: It used to decide whether the &apos;Onboard SMB Stores&apos; button should be visible on the record page.</description>
    <formula>IF(
  AND(
    NOT(ISBLANK(ContractId)),
    Text(Contract.Status) = $Label.Contract_Status_Activated
  ),
  true,
  false
)</formula>
    <label>Enable Onboard SMB Stores</label>
    <type>Checkbox</type>
</CustomField>