sfdx-source/force-app/main/default/objects/Opportunity/fields/Estimated_Number_of_Stores__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Stores__c</fullName>
    <description>LEM-74: Estimated number of stores to which this deal will apply.</description>
    <inlineHelpText>Estimated number of stores to which this deal will apply</inlineHelpText>
    <label>Estimated # of Stores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>