sfdx-source/force-app/main/default/objects/Opportunity/fields/Estimated_Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Investment__c</fullName>
    <description>LEM-5334: It is used to store the total amount invested derived from all related quote line items.</description>
    <label>Estimated Total Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>