sfdx-source/force-app/main/default/objects/Opportunity/fields/First_Activity__c.field-meta.xml
<CustomField>
    <fullName>First_Activity__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13561: It populate the Date of initial activity on the prospect.</description>
    <inlineHelpText>Date of initial activity on the prospect.</inlineHelpText>
    <label>First Activity</label>
    <type>DateTime</type>
</CustomField>