sfdx-source/force-app/main/default/objects/Opportunity/fields/FranchiseAmendmentProcess__c.field-meta.xml
<CustomField>
    <fullName>FranchiseAmendmentProcess__c</fullName>
    <description>LEM-2350: This field will be used to capture the Franchise Amendement process entered by Mx in the Nintex form.</description>
    <label>Franchise Enrollment Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opt_In_Opt_Out_Decision</valueSetName>
    </valueSet>
</CustomField>