sfdx-source/force-app/main/default/objects/Opportunity/fields/Ingestion_log_Id__c.field-meta.xml
<CustomField>
    <fullName>Ingestion_log_Id__c</fullName>
    <description>LEM-23798: It is used to store ingestion log record Id received from self serve payload</description>
    <label>Ingestion log Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>