sfdx-source/force-app/main/default/objects/Opportunity/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14050: It indicates whether the deal was initiated by the Merchant or by DoorDash.</description>
    <inlineHelpText>Indicates whether the deal was initiated by the Merchant or by DoorDash.</inlineHelpText>
    <label>Initiated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>DoorDash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>