sfdx-source/force-app/main/default/objects/Opportunity/fields/Is_Automated_Onboarding_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Automated_Onboarding_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2294: Captures the Salesforce Automated Onboarding decision</description>
    <label>Is Automated Onboarding Required?</label>
    <type>Checkbox</type>
</CustomField>