sfdx-source/force-app/main/default/objects/Opportunity/fields/Is_Create_Amendment_Button_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Create_Amendment_Button_Visible__c</fullName>
    <description>LEM-14855: This is utilized to decide whether the Create Amendment button should be shown on the layout. It was created because a flexi page cannot have more than 10 conditions for visibility of a button.
LEM-23603: The create amendment button should be visible for Contract Correction sub-types.</description>
    <formula>IF(
  Text(Account.Segment__c) != $Label.AccountSegmentSMB,
  true,
  IF(
    AND(
      Text(Account.Type) = $Label.Subtype_Corporate,
      OR(
        Text(Opportunity_Sub_Type__c) = $Label.Opportunity_Sub_Type_Upgrade,
        Text(Opportunity_Sub_Type__c) = $Label.Opportunity_Sub_Type_Ads_Promos,
        Text(Opportunity_Sub_Type__c) = $Label.Opportunity_Sub_Type_Retention,
        Text(Opportunity_Sub_Type__c) = $Label.Opportunity_Sub_Type_Contract_Correction_New, /*LEM-23603*/
        Text(Opportunity_Sub_Type__c) = $Label.Opportunity_Sub_Type_Contract_Correction_Amendment /*LEM-23603*/
      )
    ),
    true,
    IF(
      AND(
        Text(Account.Type) = $Label.Subtype_Franchisee,
        Text(Opportunity_Sub_Type__c) = $Label.Opportunity_Sub_Type_Ads_Promos
      ),
      true,
      false
    )
  )
)</formula>
    <label>Is Create Amendment Button Visible?</label>
    <type>Checkbox</type>
</CustomField>