sfdx-source/force-app/main/default/objects/Opportunity/fields/Is_Updated_By_Onboarding_Inputs__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated_By_Onboarding_Inputs__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>LEM-15113: It is used to indicate if the Opportunity has been updated by Onboarding Inputs.</description>
    <label>Is Updated By Onboarding Inputs</label>
    <type>Checkbox</type>
</CustomField>