sfdx-source/force-app/main/default/objects/Opportunity/fields/Is_Updated_By_System__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated_By_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2904: It is used to identify whether an Opportunity is updated from service Implementation logic of updating the opportunity to Closed Won or Closed Lost based on value of Franchise Amendment process field.</description>
    <label>Is Updated By System</label>
    <type>Checkbox</type>
</CustomField>