sfdx-source/force-app/main/default/objects/Opportunity/fields/Is_Updated_from_Nintex__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated_from_Nintex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2882: Checkbox used to signify if the Update is occurring from Nintex.</description>
    <label>Is Updated from Nintex</label>
    <type>Checkbox</type>
</CustomField>