sfdx-source/force-app/main/default/objects/Opportunity/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13561: It is used to populate the Date of most recent activity on the prospect.</description>
    <inlineHelpText>Date of most recent activity on the prospect.</inlineHelpText>
    <label>Last Activity</label>
    <type>DateTime</type>
</CustomField>