sfdx-source/force-app/main/default/objects/Opportunity/fields/Last_Inbound_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_Date_Time__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15472: It indicates the most recent time this Opportunity has inbounded.</description>
    <inlineHelpText>Indicates the most recent time this Opportunity has inbounded.</inlineHelpText>
    <label>Last Inbound Date/Time</label>
    <type>DateTime</type>
</CustomField>