sfdx-source/force-app/main/default/objects/Opportunity/fields/Last_Meeting_Ran__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting_Ran__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14733: It represents date of the last completed meeting with the prospect.</description>
    <inlineHelpText>Date of the last completed meeting with the Opportunity</inlineHelpText>
    <label>Last Meeting Ran</label>
    <type>DateTime</type>
</CustomField>