sfdx-source/force-app/main/default/objects/Opportunity/fields/Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Change__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13561: It is used to populate Date of most recent opportunity stage change.</description>
    <formula>IF(
        ISBLANK(LastStageChangeDate),
        null,
        DATEVALUE(LastStageChangeDate)
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date of most recent SMB opportunity stage change.</inlineHelpText>
    <label>Last Stage Change</label>
    <type>Date</type>
</CustomField>