sfdx-source/force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <description>LEM-118/LEM:419: If an opportunity was lost, this field is used to indicate the reason the opportunity was lost.</description>
    <label>Lost / Stalled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive with Competitor</fullName>
            </value>
            <value>
                <fullName>Incorrect Data</fullName>
            </value>
            <value>
                <fullName>Lack of Internal Consensus</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Negative Prior DoorDash Experience</fullName>
            </value>
            <value>
                <fullName>Not Bought Into Value Prop</fullName>
            </value>
            <value>
                <fullName>Not Currently a Priority</fullName>
            </value>
            <value>
                <fullName>Operational Obstacles</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Product / Feature Blockers</fullName>
            </value>
            <value>
                <fullName>Requested Product/Feature on Roadmap</fullName>
            </value>
            <value>
                <fullName>Unresponsive DM</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <isActive>false</isActive>
                <label>Duplicate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>